--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "node-telegram-webapps": "^1.0.0",
+    "@telegram-mini-apps/node-telegram-webapps": "^1.0.0", 
     "cors": "^2.8.5",
     "dotenv": "^16.3.1"
   }
