--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-BOT_TOKEN=8469004829:AAHgMd0EBHrdmMf3aWYR12wXTIY9jlAD9EY
+# .env.example
+# আপনার টেলিগ্রাম বট টোকেন এখানে দিন
+BOT_TOKEN=আপনার_টেলিগ্রাম_বট_টোকেন_এখানে_বসবে
